Bux Fix: Footer overlaps other divs

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,17 +1,23 @@
-#about {
-  height: 70vh;
-}
-
 #text-about {
   margin: 24px;
   text-align: center;
 }
 
 #tecnologiasUtilizadas {
-  padding: 5% 20%;
+  padding: 0% 20%;
   float: center;
+}
+
+#about {
+  height: 150vh;
+  padding-bottom: 70px;
 }
 
 #linkToWhatsapp {
   font-size: 32px;
+}
+@media screen and (max-width: 555px) {
+  #about {
+    padding-bottom: 550px;
+  }
 }
