--- a/src/styles/imgPerfil.css
+++ b/src/styles/imgPerfil.css
@@ -7,7 +7,7 @@
   border-radius: 50%;
   float: left;
   padding: auto;
-  margin: 0px auto;
+  margin: 120px auto;
 }
 
 @media screen and (max-width: 1100px) {
@@ -15,6 +15,7 @@
     height: 100px ;
     width: 100px ;
     margin: auto;
+    margin-top: 120px;
     float:none;
   }
 }
